# Portfolio-Advisor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml
docs/: PRD.md  analysis-model.md  data-sources.md  deployment.md  overview.md  tech-stack.md
scripts/: crontab  entrypoint.sh
src/portfolio_advisor/: config.py
src/portfolio_advisor/analysis/: composite.py  signal.py  zscore.py
src/portfolio_advisor/backtest/: engine.py
src/portfolio_advisor/data/: fetchers.py  store.py
src/portfolio_advisor/mcp/: server.py
src/portfolio_advisor/scripts/: update_data.py
src/portfolio_advisor/ui/: app.py  charts.py
src/portfolio_advisor/web/: app.py
src/portfolio_advisor/web/static/: app.js  style.css
src/portfolio_advisor/web/templates/: index.html
tests/: conftest.py  test_backtest.py  test_composite.py  test_fetchers.py  test_pipeline.py  test_signal.py  test_store.py  test_web.py  test_zscore.py
