[project]
name = "portfolio-advisor"
version = "1.0.0"
description = "Investment portfolio ratio advisor - Real assets (Gold/Silver) vs ETF (S&P500/Nasdaq100) allocation based on multi-timeframe Z-Score model"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "jinja2>=3.1,<4",
    "duckdb>=1.2,<2",
    "pandas>=2.2,<4",
    "yfinance>=1.0,<2",
    "fredapi>=0.5,<1",
    "xlrd>=2.0,<3",
    "fastmcp>=2.0,<4",
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
portfolio-update = "portfolio_advisor.scripts.update_data:main"
portfolio-mcp = "portfolio_advisor.mcp.server:main"
portfolio-web = "portfolio_advisor.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_advisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.0,<9", "numpy>=2.2,<3"]
